Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-4949

Spider engine causes compilation errors if compiled without partitioning

Details

    • Bug
    • Status: Closed (View Workflow)
    • Major
    • Resolution: Fixed
    • None
    • 10.0.5
    • None

    Description

      Initially reported at https://blog.mariadb.org/mariadb-10-0-4-alpha-now-available/

      cmake . -DCMAKE_BUILD_TYPE=RelWithDebInfo -DWITH_PARTITION_STORAGE_ENGINE=OFF && make -j3

      10.0-build-without-parts/storage/spider/ha_spider.cc: In member function 'virtual int ha_spider::open(const char*, int, uint)':
      10.0-build-without-parts/storage/spider/ha_spider.cc:584:7: error: 'pt_handler_mutex' was not declared in this scope
      10.0-build-without-parts/storage/spider/ha_spider.cc:585:5: error: 'partition_share' was not declared in this scope
      10.0-build-without-parts/storage/spider/ha_spider.cc:299:22: warning: unused variable 'hash_value' [-Wunused-variable]
      10.0-build-without-parts/storage/spider/ha_spider.cc: In member function 'virtual int ha_spider::info(uint)':
      10.0-build-without-parts/storage/spider/ha_spider.cc:7769:16: error: 'SPIDER_SHARE' has no member named 'partition_share'
      make[2]: *** [storage/spider/CMakeFiles/spider.dir/ha_spider.cc.o] Error 1
      make[2]: *** Waiting for unfinished jobs....

      <svoj> as for partitioning - it must be a bug. If spider can't compile w/o partitioning, it must disable itself properly.

      Attachments

        Activity

          Fixed in 10.0.5, revision-id: kentokushiba@gmail.com-20130916183003-x32rqrm0or5zdj83

          svoj Sergey Vojtovich added a comment - Fixed in 10.0.5, revision-id: kentokushiba@gmail.com-20130916183003-x32rqrm0or5zdj83

          People

            svoj Sergey Vojtovich
            elenst Elena Stepanova
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Git Integration

                Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.