fix MDEV-4949 Spider engine causes compilation errors if compiled without partitioning